// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authors can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createAuthor": Object {
      "bio": Array [],
      "id": Any<String>,
      "image": null,
      "links": null,
      "name": "John Grisham",
      "slug": "j-grish",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be read in list 1`] = `
Object {
  "data": Object {
    "authors": Object {
      "nodes": Any<Array>,
      "pageInfo": Object {
        "endCursor": Any<String>,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": Any<String>,
      },
      "totalCount": 2,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
